# BelugaDB

./: implement.txt  package-lock.json  package.json
src/: App.css  App.tsx  NotificationContext.tsx  main.tsx  types.ts
src-tauri/: .taurignore  Cargo.toml  connections.json  tauri.conf.json
src-tauri/src/: main.rs
