[package]
name = "beluga_db"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beluga_db_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tauri-plugin-dialog = "2.0.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
postgres-types = "0.2"
rust_decimal = { version = "1", features = ["db-postgres"] }
postgis = "0.9.0"
geo-types = "0.7"
wkt = "0.10"
